[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/WordModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Musics/Musics/CyberTyper_music7.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.360784, 0.360784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[sub_resource type="Animation" id=2]
resource_name = "A_0"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("STREAK:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("STREAK:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("STREAK:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52, 40 ), Vector2( 56, 36 ), Vector2( 56, 44 ), Vector2( 48, 48 ), Vector2( 60, 44 ), Vector2( 52, 40 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("WPM:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("WPM:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("WPM:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 324, 40 ), Vector2( 316, 44 ), Vector2( 316, 32 ), Vector2( 328, 44 ), Vector2( 328, 36 ), Vector2( 324, 40 ) ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SCORE:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("SCORE:rect_scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("SCORE:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 84 ), Vector2( 108, 80 ), Vector2( 84, 84 ), Vector2( 92, 76 ), Vector2( 100, 92 ), Vector2( 100, 84 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sco:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 156, 104 ), Vector2( 160.5, 105.5 ), Vector2( 160.5, 101 ), Vector2( 157.5, 105 ), Vector2( 155, 101.5 ), Vector2( 161.5, 101.5 ), Vector2( 154, 104 ), Vector2( 158, 100 ), Vector2( 158, 106.5 ), Vector2( 151.5, 105.5 ), Vector2( 156, 104 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Str:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 60 ), Vector2( 29.5, 56 ), Vector2( 29, 58.5 ), Vector2( 33, 58 ), Vector2( 27.5, 57 ), Vector2( 28.5, 62.5 ), Vector2( 27, 60 ), Vector2( 32, 61.5 ), Vector2( 28.5, 60 ), Vector2( 33.5, 59 ), Vector2( 32, 60 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("wpm:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 60 ), Vector2( 303.5, 58 ), Vector2( 299.5, 59.5 ), Vector2( 294.5, 55 ), Vector2( 296.5, 58.5 ), Vector2( 293.5, 55.5 ), Vector2( 299.5, 57.5 ), Vector2( 302.5, 54.5 ), Vector2( 297.5, 55 ), Vector2( 298, 54.5 ), Vector2( 300, 60 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("WORDS:rect_scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = false
tracks/12/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("GridContainer:rect_scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = false
tracks/13/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ) ]
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("TEXTS:rect_scale:x")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("TEXTS:rect_scale:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/16/type = "value"
tracks/16/path = NodePath("TEXTS:rect_position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 20 ), Vector2( 102.5, 18 ), Vector2( 104.5, 20.5 ), Vector2( 100, 25 ), Vector2( 91.5, 25 ), Vector2( 94, 22 ), Vector2( 96.5, 26 ), Vector2( 93, 29 ), Vector2( 101, 24 ), Vector2( 93, 20.5 ), Vector2( 100, 20 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Up"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Handler/ColorRect:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Handler/ColorRect:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Handler/ColorRect:color:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.333333, -0.25, 0, 0.25, 0, 0.454902, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Handler/ColorRect2:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Handler/ColorRect2:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Handler/ColorRect2:color:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.333333, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("Handler:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 404.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Handler" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Handler"]
margin_left = 168.0
margin_top = 31.5
margin_right = 232.0
margin_bottom = 63.5
rect_pivot_offset = Vector2( 32, 16 )
color = Color( 1, 1, 1, 0.333333 )

[node name="ColorRect2" type="ColorRect" parent="Handler"]
margin_left = 175.5
margin_top = 36.0
margin_right = 223.5
margin_bottom = 60.0
rect_pivot_offset = Vector2( 24, 12 )
color = Color( 1, 1, 1, 0.333333 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 248.0
margin_right = 400.0
margin_bottom = 300.0
rect_scale = Vector2( 1.05, 1.05 )
rect_pivot_offset = Vector2( 200, 26 )

[node name="INPUT" type="LineEdit" parent="GridContainer" groups=["INPUT"]]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_styles/normal = SubResource( 1 )

[node name="WORDS" type="GridContainer" parent="."]
margin_left = 43.5
margin_top = 153.0
margin_right = 353.5
margin_bottom = 233.0
rect_scale = Vector2( 1.1, 1.1 )
rect_pivot_offset = Vector2( 155, 40 )
columns = 3

[node name="WordModel" parent="WORDS" instance=ExtResource( 1 )]
margin_top = 9.0
margin_right = 100.0
margin_bottom = 29.0

[node name="WordModel2" parent="WORDS" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 9.0
margin_right = 204.0
margin_bottom = 29.0

[node name="WordModel3" parent="WORDS" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 9.0
margin_right = 308.0
margin_bottom = 29.0

[node name="WordModel4" parent="WORDS" instance=ExtResource( 1 )]
margin_top = 51.0
margin_right = 100.0
margin_bottom = 71.0

[node name="WordModel5" parent="WORDS" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 51.0
margin_right = 204.0
margin_bottom = 71.0

[node name="WordModel6" parent="WORDS" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 51.0
margin_right = 308.0
margin_bottom = 71.0

[node name="SCORE" type="Label" parent="."]
margin_left = 100.0
margin_top = 84.0
margin_right = 299.999
margin_bottom = 124.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 20 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="STREAK" type="Label" parent="."]
margin_left = 52.0
margin_top = 40.0
margin_right = 76.0001
margin_bottom = 64.0013
rect_min_size = Vector2( 24, 24 )
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 12, 12 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="WPM" type="Label" parent="."]
margin_left = 324.0
margin_top = 40.0
margin_right = 348.0
margin_bottom = 64.0001
rect_min_size = Vector2( 24, 24 )
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 12, 12 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 28.0
rect_scale = Vector2( 0.75, 0.75 )
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "Back"

[node name="TEXTS" type="Label" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 70.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 100, 25 )
text = "Nice"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "A_0"
anims/A_0 = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Sco" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
margin_left = 156.0
margin_top = 104.0
margin_right = 198.0
margin_bottom = 120.0
rect_scale = Vector2( 2, 2 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Str" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
margin_left = 32.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 76.0001
rect_scale = Vector2( 1.5, 1.5 )
text = "Streak"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="wpm" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.254902 )
margin_left = 300.0
margin_top = 60.0
margin_right = 348.0
margin_bottom = 76.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Wpm"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TEXTCHANGE" type="AnimationPlayer" parent="."]
anims/Up = SubResource( 4 )

[connection signal="text_changed" from="GridContainer/INPUT" to="." method="_on_INPUT_text_changed"]
[connection signal="text_entered" from="GridContainer/INPUT" to="." method="_on_INPUT_text_entered"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
